[package]
name = "openssl-engine-kms"
version = "0.1.0"
authors = ["Nuutti Kotivuori <naked@iki.fi>"]
edition = "2018"

[dependencies]
libc = "*"
# rustls used because it is difficult to properly use openssl inside openssl engine
rusoto_core = { path = "../../public/rusoto/rusoto/core", default_features = false, features=["rustls"] }
rusoto_kms = { path = "../../public/rusoto/rusoto/services/kms", default_features = false, features=["rustls"] }
lazy_static = "*"
bytes = "*"

[lib]
name = "openssl_engine_kms"
crate-type = ["cdylib"]
