[package]
name = "openssl-engine-kms"
version = "0.1.0"
authors = ["Nuutti Kotivuori <naked@iki.fi>"]
edition = "2018"

[dependencies]
libc = "*"
lazy_static = "*"
bytes = "*"
log = "*"
env_logger = "*"
# rustls used because it is difficult to properly use openssl inside openssl engine
rusoto_core = { path = "../../public/rusoto/rusoto/core", default_features = false, features=["rustls"] }
rusoto_kms = { path = "../../public/rusoto/rusoto/services/kms", default_features = false, features=["rustls"] }


[lib]
name = "openssl_engine_kms"
crate-type = ["cdylib"]
